Add type and property specification, property for type API